# base58-uuid

./: LICENSE  README.md  base58-uuid.cabal
src/Data/UUID/: Base58.hs
test/: Spec.hs
